--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "Operation Zeus chrome app",
   "author": "Luop90",
   "dependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
     "gulp": "^3.9.1"
   }
 }
