Added missing dependencies

--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "Operation-Zeus-Chrome",
   "description": "Operation Zeus chrome app",
   "author": "Luop90",
+  "license": "GPL-3.0",
   "dependencies": {
     "babel-preset-es2015": "^6.16.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
-    "gulp": "^3.9.1"
+    "grunt-contrib-jade": "^1.0.0",
+    "grunt-contrib-less": "^1.4.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-ng-annotate": "^2.0.2",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^2.0.0"
   }
 }
